syntax = 'proto3';

package CRM;

service SendCluster {
	rpc SendCluster (ClusterInfo) returns (TimeTick) {}
}

message ClusterInfo {
	repeated string MetricValue = 1;
	string Clustername = 2;
	string KubeConfig = 3;
	string AdminToken = 4;
	repeated NodeInfo NodeList = 5;
	map<string, double> ClusterMetricSum = 6;
	string Host = 9;
}
message NodeInfo {
	string NodeName = 1;
	repeated PodInfo PodList = 2;
	map<string, double> NodeMetricSum = 3;
	map<string, int64> NodeCapacity = 4;
	map<string, int64> NodeAllocatable = 5;
	map<string, string> GeoInfo = 6;
	double CpuCores = 7;
	double MemoryTotal = 8;
	double ScrapeError = 9;
}
message PodInfo{
	string PodName = 1;
	map<string, double> PodMetrics = 2;
}

message TimeTick {
	int64 Tick =1;
}
